...
                                                <rect key="frame" x="0.0" y="0.0" width="414" height="114"/>
                                                <color key="backgroundColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="display"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="50"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                <rect key="frame" x="83" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="setVariableValue" label="→M"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="→M">
...
                                                <rect key="frame" x="166" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="addVariableOperand" label="M"/>
                                                <gestureRecognizers/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
...
                                                <rect key="frame" x="249" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="clearAllInputs" label="C"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="C">
...
                                                <rect key="frame" x="332" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="backspace" label="⬅︎"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="⬅︎">
...
                                                <rect key="frame" x="83" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="plus" label="+"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="+">
...
                                                <rect key="frame" x="166" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="minus" label="-"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="-">
...
                                                <rect key="frame" x="249" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="multiply" label="×"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="×">
...
                                                <rect key="frame" x="166" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.80000001190000003" green="0.40000000600000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="seven" label="7"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <rect key="frame" x="332" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.80000001190000003" green="0.40000000600000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="nine" label="9"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="9">
...
                                                <rect key="frame" x="83" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="squaredRoot" label="√"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="√">
...
                                                <rect key="frame" x="166" y="0.0" width="82" height="91"/>
                                                <color key="backgroundColor" red="0.80000001190000003" green="0.40000000600000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="four" label="4"/>
                                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="30"/>
                                                <state key="normal" title="4">
...
