...
            present(variablesViewController, animated: true)
        }
    }
    
    private func addLogLabel() {
        let log = AdaptiveLabel.init(frame: CGRect(x:0, y:0, width: 800, height: 40))
        log.accessibilityIdentifier = "description"
        //log.backgroundColor = UIColor.black
        log.textAlignment = .right
        //log.textColor = UIColor.white
        log.font = UIFont.systemFont(ofSize: 50, weight: UIFontWeightUltraLight)
        log.minimumScaleFactor = 0.5
        log.lineBreakMode = .byTruncatingHead
...
